<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">Dhamma.gift</string>
    <string name="title_activity_main">Dhamma.gift</string>
    <string name="package_name">gift.dhamma.mobile</string>
    <string name="custom_url_scheme">gift.dhamma.mobile</string>

    <!-- App Shortcuts labels (res/xml/shortcuts.xml) -->
    <string name="shortcut_toc_short">TOC</string>
    <string name="shortcut_toc_long">Table of Contents</string>
    <string name="shortcut_bu_pm_short">Bhikkhu Pātimokkha</string>
    <string name="shortcut_bu_pm_long">Bhikkhu Pātimokkha</string>
    <string name="shortcut_bi_pm_short">Bhikkhuni Pātimokkha</string>
    <string name="shortcut_bi_pm_long">Bhikkhuni Pātimokkha</string>
    <string name="shortcut_favorites_short">Favorites</string>
    <string name="shortcut_favorites_long">Favorites &amp; History</string>
</resources>
